@@ -62,6 +62,7 @@ export(getUpper)
 export(getValues)
 export(hasDiscrete)
 export(hasFiniteBoxConstraints)
+export(hasForbidden)
 export(hasInteger)
 export(hasLogical)
 export(hasNumeric)
@@ -69,6 +70,7 @@ export(hasRequires)
 export(isDiscrete)
 export(isEmpty)
 export(isFeasible)
+export(isForbidden)
 export(isInteger)
 export(isLogical)
 export(isNumeric)
