@@ -18,6 +18,8 @@ convertParamSetToIrace = function(par.set, digits = 4, as.chars = FALSE) {
   digits = convertInteger(digits)
   checkArg(digits, "integer", len = 1L, na.ok = FALSE, lower = 1L)
   checkArg(as.chars, "logical", len = 1L, na.ok = FALSE)
+  if (!is.null(par.set$forbidden))
+    stopf("Operation not allowed for param set with forbidden region currently!")
   requirePackages("irace", "convertParamSetToIrace")
   lines = character(0)
   fnum = function(x) formatC(x, format = "f", digits = digits)
