@@ -1,0 +1,18 @@
+% Generated by roxygen2 (4.0.1): do not edit by hand
+\name{hasForbidden}
+\alias{hasForbidden}
+\title{Check parameter set for forbidden region.}
+\usage{
+hasForbidden(par.set)
+}
+\arguments{
+\item{par.set}{[\code{\link{ParamSet}}]\cr
+Parameter set.}
+}
+\value{
+[\code{logical(1)}].
+}
+\description{
+Check parameter set for forbidden region.
+}
+
