@@ -18,8 +18,9 @@ logical(1)
 }
 \description{
 Check if a parameter value satisfies the constraints of the
-parameter description. This includes the \code{requires} expressions,
-if \code{par} is a \code{\link{ParamSet}}. If \code{requires} is not satisfied,
+parameter description. This includes the \code{requires} expressions and
+the \code{forbidden} expression, if \code{par} is a \code{\link{ParamSet}}.
+If \code{requires} is not satisfied,
 the parameter value must be set to scalar \code{NA} to be still feasible, a single scalar even in a
 case of a vector parameter.
 }
